[tool.poetry]
name = "SQLAlchemy-ImageAttach-boto3"
version = "0.1.0"
description = "SQLAlchemy-ImageAttach AWS S3 Store with boto3"
authors = ["Spoqa Creators <dev@spoqa.com>"]
maintainers = ["rusty <rusty@spoqa.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/spoqa/sqlalchemy-imageattach-boto3"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Topic :: Database :: Front-Ends',
    'Topic :: Multimedia :: Graphics',
]

packages = [
    { include = "sqlalchemy_imageattach_boto3.py" },
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

boto3 = "^1.11"
SQLAlchemy-ImageAttach = "~1.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-import-order = "^0.18.1"
flake8-import-order-spoqa = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
